sfdx-project/force-app/main/default/objects/Contract/fields/Approved_Terms_Matched__c.field-meta.xml
<CustomField>
    <fullName>Approved_Terms_Matched__c</fullName>
    <label>Approved Terms Matched</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set by the Ironclad sync when the executed contract's approved-terms hash matches the CPQ quote's approved terms.</description>
</CustomField>