sfdx-project/force-app/main/default/objects/Contract/fields/Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Version__c</fullName>
    <label>Contract Version</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <required>true</required>
    <description>Bumped by the Ironclad sync whenever the executed contract's terms are amended.</description>
</CustomField>