sfdx-project/force-app/main/default/objects/Contract/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Text</type>
    <length>3</length>
    <description>Stand-in for standard CurrencyIsoCode. Swap to the standard field if multi-currency is enabled in your org.</description>
</CustomField>