sfdx-project/force-app/main/default/objects/Contract/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Subscription</fullName><default>false</default><label>Subscription</label></value>
            <value><fullName>Usage</fullName><default>false</default><label>Usage</label></value>
            <value><fullName>One-Time</fullName><default>false</default><label>One-Time</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>